creating installer now works (checked for Mac, not Windows)